WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35238
Shared worker types used in globalObjectPrototypeIsDOMWindow are not properly guarded
https://bugs.webkit.org/show_bug.cgi?id=35238
Summary
Shared worker types used in globalObjectPrototypeIsDOMWindow are not properly...
Steve Block
Reported
2010-02-22 06:15:18 PST
Shared worker types used in globalObjectPrototypeIsDOMWindow are not properly guarded
Attachments
Patch
(1.74 KB, patch)
2010-02-22 06:18 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-02-22 06:17:49 PST
This causes build failure on Android. It was introduced in
http://trac.webkit.org/changeset/54972
Steve Block
Comment 2
2010-02-22 06:18:42 PST
Created
attachment 49212
[details]
Patch
Nate Chapin
Comment 3
2010-02-22 07:55:52 PST
Comment on
attachment 49212
[details]
Patch Ok, thanks.
WebKit Commit Bot
Comment 4
2010-02-22 08:17:56 PST
Comment on
attachment 49212
[details]
Patch Clearing flags on attachment: 49212 Committed
r55084
: <
http://trac.webkit.org/changeset/55084
>
WebKit Commit Bot
Comment 5
2010-02-22 08:18:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug