2010-02-22  Steve Block  <steveblock@google.com>

Reviewed by Nate Chapin.

        Shared worker types used in globalObjectPrototypeIsDOMWindow are not properly guarded
        https://bugs.webkit.org/show_bug.cgi?id=35238

        No new tests, build fix only.

        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::globalObjectPrototypeIsDOMWindow):

Canonical link: https://commits.webkit.org/46387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55084 268f45cc-cd09-0410-ab3c-d52691b4dbfc